force-app/main/default/objects/Directive_Recommendation__c/Directive_Recommendation__c.object-meta.xml
<CustomObject>
    <description>Directive Recommendation</description>
    <label>Recommendation</label>
    <nameField>
        <displayFormat>REC-{0000000}</displayFormat>
        <label>Recommendation Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Recommendations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>