force-app/main/default/objects/Directive_Recommendation__c/fields/Accepted__c.field-meta.xml
<CustomField>
    <fullName>Accepted__c</fullName>
    <label>Accepted</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>