force-app/main/default/objects/Directive_Recommendation__c/fields/Context_Snapshot__c.field-meta.xml
<CustomField>
    <fullName>Context_Snapshot__c</fullName>
    <label>Context Snapshot</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>