force-app/main/default/objects/Directive_Recommendation__c/fields/Model_Version__c.field-meta.xml
<CustomField>
    <fullName>Model_Version__c</fullName>
    <label>Model Version</label>
    <length>80</length>
    <type>Text</type>
</CustomField>