force-app/main/default/objects/Directive_Recommendation__c/fields/Recommendation_Type__c.field-meta.xml
<CustomField>
    <fullName>Recommendation_Type__c</fullName>
    <label>Recommendation Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value><fullName>Action</fullName><default>false</default><label>Action</label></value>
            <value><fullName>Summary</fullName><default>false</default><label>Summary</label></value>
            <value><fullName>Risk</fullName><default>false</default><label>Risk</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>