force-app/main/default/objects/Directive_Recommendation__c/fields/Recommended_Action_Key__c.field-meta.xml
<CustomField>
    <fullName>Recommended_Action_Key__c</fullName>
    <label>Recommended Action Key</label>
    <length>80</length>
    <type>Text</type>
</CustomField>