force-app/main/default/objects/Directive_Recommendation__c/fields/Work_Item__c.field-meta.xml
<CustomField>
    <fullName>Work_Item__c</fullName>
    <label>Work Item</label>
    <type>Lookup</type>
    <referenceTo>Directive_Work_Item__c</referenceTo>
    <relationshipLabel>Recommendations</relationshipLabel>
    <relationshipName>Directive_Recommendations</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>